infra/patroni-gold-golddr/kustomize/base/services.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: patroni
    cluster-name: patroni
    app.kubernetes.io/name: patroni
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: patroni
  name: patroni-master
spec:
  ports:
    - name: 5432-tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cluster-name: patroni
    role: master
    app.kubernetes.io/name: patroni
  sessionAffinity: None
  type: ClusterIP
